<resources>
    <string name="app_name">Kirana Genie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Customer Care</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">cart</string>

    <string-array name="array_name">
        <item>100gms</item>
        <item>200gms</item>
        <item>300gms</item>
    </string-array>

    <string-array name="select_item">
        <item>Select One</item>
        <item>Select Two</item>
        <item>Select Three</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
